[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menus/TopScoreMenu/TopScore.gd" type="Script" id=1]
[ext_resource path="res://fontDump/textFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://fontDump/headerFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Menus/UITheme.tres" type="Theme" id=4]
[ext_resource path="res://Helpers/Transitioner.tscn" type="PackedScene" id=5]

[node name="TopScore" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 3 )
text = "Top score - page: 1"
align = 1

[node name="ScoreContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 984.0
margin_bottom = 98.0

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 443.0
margin_right = 984.0
margin_bottom = 480.0
size_flags_vertical = 10
custom_constants/separation = 50

[node name="btnFirst" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
margin_right = 208.0
margin_bottom = 37.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "First"

[node name="btnPrev" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
margin_left = 258.0
margin_right = 466.0
margin_bottom = 37.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Previous"

[node name="btnNext" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
margin_left = 516.0
margin_right = 724.0
margin_bottom = 37.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Next"

[node name="btnLast" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
margin_left = 774.0
margin_right = 984.0
margin_bottom = 37.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "last"

[node name="btnExit" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 510.0
margin_right = 984.0
margin_bottom = 560.0
rect_min_size = Vector2( 0, 50 )
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "Exit"

[node name="ScorePageRequest" type="HTTPRequest" parent="."]

[node name="PageCountRequest" type="HTTPRequest" parent="."]

[node name="Transitioner" parent="." instance=ExtResource( 5 )]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/btnFirst" to="." method="_on_btnFirst_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/btnPrev" to="." method="_on_btnPrev_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/btnNext" to="." method="_on_btnNext_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/btnLast" to="." method="_on_btnLast_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/btnExit" to="." method="_on_btnExit_pressed"]
[connection signal="request_completed" from="ScorePageRequest" to="." method="_on_ScorePageRequest_request_completed"]
[connection signal="request_completed" from="PageCountRequest" to="." method="_on_PageCountRequest_request_completed"]
[connection signal="transition_finished" from="Transitioner" to="." method="_on_Transitioner_transition_finished"]
